2002-07-20  Sam Steingold  <sds@gnu.org>

	* m4/readline.m4 (CL_READLINE): check for the name of the file
	completion function and CONST modifier of its first argument
	* unixconf.h.in (READLINE_CONST, READLINE_FILE_COMPLETE): undef
	* stream.d: use them

2002-07-19  Sam Steingold  <sds@gnu.org>

	* spvw.d (main): more begin/end_system_call

2002-07-19  Sam Steingold  <sds@gnu.org>

	* m4/termcap.m4 (CL_TERMCAP): use AC_SEARCH_LIBS
	* m4/readline.m4 (CL_READLINE): AC_REQUIRE CL_TERMCAP;
	check for the readline library, not just the header
	* configure (conf_dir): new function
	* makemake.in (LIBS): LIBTERMCAP and LIBREADLINE
	get into LIBS automagically

2002-07-19  Sam Steingold  <sds@gnu.org>

	* lispbibl.d (GNU_GETTEXT): define based on NO_GETTEXT and
	ENABLE_NLS, not complex heuristics

2002-07-19  Sam Steingold  <sds@gnu.org>

	do not distribute readline and termcap with CLISP
	* configure, makemake.in: dropped termcap and readline
	* m4/termcap.m4 (LIBTERMCAP): set to "broken" when termcap does
	not work
	* m4/readline.m4 (CL_READLINE): new test
	* configure.in (CL_READLINE): call it
	* lispbibl.d (GNU_READLINE): define based on NO_READLINE and
	HAVE_READLINE_READLINE_H, not complex heuristics
	* stream.d [GNU_READLINE]: include system headers, not local ones
	* unixconf.h.in (HAVE_READLINE_READLINE_H): undef
	* readline/*, termcap/*: removed
	* _distmakefile: removed readline docs

2002-07-19  Sam Steingold  <sds@gnu.org>

	fixed bug #[ 583751 ]: (compile-file xx :verbose NIL)
	* compiler.lisp (with-compilation-unit): bind *C-LISTING-OUTPUT*

2002-07-15  Marco Baringer  <empb@bese.it>
	    Sam Steingold  <sds@gnu.org>

	POSIX:DUPLICATE-HANDLE - interface to dup/dup2/DuplicateHandle
	* pathname.d (DUPLICATE-HANDLE): implemented
	* constsym.d, subr.d (duplicate_handle): ditto
	* posix.lisp (duplicate-handle): export

2002-07-16  Sam Steingold  <sds@gnu.org>

	* defs1.lisp (module-name): do not use ETYPECASE for
	bootstrapping reasons