@@ -1,3 +1,9 @@
+2002-07-21  Sam Steingold  <sds@gnu.org>
+
+	* m4/readline.m4 (CL_READLINE): fixed whitespace
+	* configure: remove config.cache to avoid stale cache problems
+	* noreadline.d: use READLINE_CONST and include unixconf.h
+
 2002-07-20  Sam Steingold  <sds@gnu.org>
 
 	* m4/readline.m4 (CL_READLINE): check for the name of the file
